; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_ctl_disconnect.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_ctl_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_session = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @necp_ctl_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @necp_ctl_disconnect(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.necp_session*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.necp_session*
  store %struct.necp_session* %9, %struct.necp_session** %7, align 8
  %10 = load %struct.necp_session*, %struct.necp_session** %7, align 8
  %11 = icmp ne %struct.necp_session* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %3
  %13 = load %struct.necp_session*, %struct.necp_session** %7, align 8
  %14 = call i32 @necp_policy_mark_all_for_deletion(%struct.necp_session* %13)
  %15 = load %struct.necp_session*, %struct.necp_session** %7, align 8
  %16 = call i32 @necp_policy_apply_all(%struct.necp_session* %15)
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to %struct.necp_session*
  %19 = call i32 @necp_delete_session(%struct.necp_session* %18)
  br label %20

20:                                               ; preds = %12, %3
  ret i32 0
}

declare dso_local i32 @necp_policy_mark_all_for_deletion(%struct.necp_session*) #1

declare dso_local i32 @necp_policy_apply_all(%struct.necp_session*) #1

declare dso_local i32 @necp_delete_session(%struct.necp_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
